--- a/public/hanabi/index.html
+++ b/public/hanabi/index.html
@@ -7,14 +7,15 @@
     <script src="/hanabi/swfobject.js"></script>
     <script src="/hanabi/hanabi.js"></script>
     <link rel="stylesheet" type="text/css" href="/hanabi/hanabi.css" />
+
     <title>今夜も打ち上げナイト</title>
-    <!-- TODO: ↓ metaタグいろいろ -->
-    <meta name="description" content="あああああああああああああああああ">
-    <link rel="shortcut icon" href="favicon.ico">
-    <meta property="og:title" content="あああああああああああああああ"/>
+    <meta name="description" content="真夏の夜は打ち上げナイト!!! 一日の終わりに打ち上げ花火ナイト!!!!!! インターネットに打ち上げ花火を上げられます。今日あったいいことや、がんばったできごとを打ち上げましょう。">
+    <link rel="shortcut icon" href="/hanabi/img/favicon.png">
+    <meta property="og:title" content="真夏の夜は打ち上げナイト!!! 一日の終わりに打ち上げ花火ナイト!!!!!! インターネットに打ち上げ花火を上げられます。今日あったいいことや、がんばったできごとを打ち上げましょう。"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/hanabi/"/>
-    <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
-    <link rel="canonical" href="http://higashi-dance-network.appspot.com/iromiru/" />
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/hanabi/img/thumbnail.png"/>
+    <link rel="canonical" href="http://higashi-dance-network.appspot.com/hanabi/" />
+
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30891681-1']);
@@ -32,13 +33,12 @@
       <div id="service-header">
         <h1><a href="/hanabi/"><img src="/hanabi/img/logo.png" title="今夜も打ち上げナイト"></a></h1>
         <span class="buttons">
-          <!-- TODO: ↓ タイトルいれるとか -->
-          <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fkasanegi%2F&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
+          <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fhanabi%2F&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://higashi-dance-network.appspot.com/kasanegi/" data-text="iromiru - 画像からカラーコード抽出便利サービス" data-lang="ja">ツイート</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://higashi-dance-network.appspot.com/hanabi/" data-text="今夜も打ち上げナイト" data-lang="ja">ツイート</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/kasanegi/" class="hatena-bookmark-button" data-hatena-bookmark-title="iromiru - 画像からカラーコード抽出便利サービス" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/hanabi/" class="hatena-bookmark-button" data-hatena-bookmark-title="今夜も打ち上げナイト" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
         </span>
       </div>
       <div id="catch">
@@ -57,7 +57,7 @@
         new TWTR.Widget({
           version: 2,
           type: 'search',
-          search: '#重ね着',
+          search: '#今夜も打ち上げナイト',
           interval: 30000,
           title: '',
           subject: '最近の打ち上げ',
