--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -48,7 +48,7 @@
       <div id="footer">
         <div id="footer-buttons">
           <span class="twitter-container">
-            <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-text="打ち上げました" data-hashtags="今夜も打ち上げナイト" data-url="">Tweet</a>
+            <a href="http://twitter.com/share" class="twitter-share-button" data-size="large" data-count="none" data-text="打ち上げました" data-hashtags="今夜も打ち上げナイト" data-url="">Tweet</a>
           </span>
           <span id="star-container"><span class="title" style="display:none;">打ち上げ</span><a href="" class="permalink"></a></span>
         </div>
