--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,15 @@
           </div>
         </div>
 
+        <div class="item" style="left: 700px; top: 500px;">
+          <div>
+            <a href="/hanabi/"><img src="/hanabi/img/thumbnail.png" title="今夜も打ち上げナイト"/></a>
+          </div>
+          <div class="title">
+            今夜も打ち上げナイト
+          </div>
+        </div>
+
       </div> <!-- items end -->
 
     </div> <!-- wrapper end -->
