--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -47,6 +47,9 @@
       </div>
       <div id="footer">
         <div id="footer-buttons">
+          <span class="share-this">
+            <img src="/hanabi/img/share.png"/>
+          </span>
           <span class="twitter-container">
             <a href="http://twitter.com/share" class="twitter-share-button" data-size="large" data-count="none" data-text="打ち上げました" data-hashtags="今夜も打ち上げナイト" data-url="">Tweet</a>
           </span>
