--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -43,7 +43,12 @@
   </head>
   <body id="uchiage-page">
     <div id="container">
-      <div id="uchiage-flash">
+      <div id="uchiage-container">
+        <div id="uchiage-flash">
+        </div>
+        <div id="uchiage-image">
+          <div class="body"></div>
+        </div>
       </div>
       <div id="footer">
         <div id="footer-buttons">
