--- a/public/hanabi/index.html
+++ b/public/hanabi/index.html
@@ -45,7 +45,7 @@
       </div>
       <form id="create-uchiage" action="/hanabi/uchiage/">
         <textarea class="body" name="body" placeholder="今夜の思いを入力!!!" required></textarea>
-        <input class="submit" type="submit" title="打ち合げる" value="" />
+        <input class="submit" type="submit" title="打ち上げる" value="" />
       </form>
 
       <div class="clear">
