--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -50,6 +50,12 @@
           <div class="body"></div>
         </div>
       </div>
+      <div id="button-container">
+        ボタン
+        <button class="button">
+          追加
+        </button>
+      </div>
       <div id="footer">
         <div id="footer-buttons">
           <span class="share-this">
