--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -31,6 +31,10 @@
   </head>
   <body id="uchiage-page">
     <div id="container">
+      <div id="service-header">
+        <h1><a href="/hanabi/"><img src="/hanabi/img/logo.png" title="今夜も打ち上げナイト"></a></h1>
+      </div>
+
       <div id="uchiage-container">
         <div id="uchiage-flash">
         </div>
@@ -38,11 +42,14 @@
           <div class="body"></div>
         </div>
       </div>
+      <div id="tamaya-container">
+        <img src="/hanabi/img/add-description.png">
+      </div>
       <div id="button-container">
-        ボタン
-        <button class="button">
-          追加
+        <button class="button" title="たまや〜">
         </button>
+      </div>
+      <div class="clear">
       </div>
       <div id="footer">
         <div id="footer-buttons">
@@ -54,7 +61,7 @@
           </span>
         </div>
         <div id="footer-catch">
-          <a href="/hanabi/" ><img src="/hanabi/img/catch-hanabi.png"></a>
+          <a href="/hanabi/" ><img src="/hanabi/img/about.png"></a>
         </div>
       </div>
       </div>
