--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -6,10 +6,10 @@
     <script src="jquery-1.7.1.min.js"></script>
     <script src="sort_color.js"></script>
     <link rel="stylesheet" type="text/css" href="sort_color.css" />
-    <title>iromiru - 画像からカラーコード抽出便利サービス</title>
+    <title>iromiru (イロミル)  - 画像からカラーコード抽出便利サービス</title>
     <meta name="description" content="iromiru (イロミル) は、お手元の画像や画像のURLから、カラーコードを集められるウェブサービスです。">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta property="og:title" content="iromiru - 画像からカラーコード抽出便利サービス"/>
+    <meta property="og:title" content="iromiru (イロミル)  - 画像からカラーコード抽出便利サービス"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/iromiru/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/iromiru/" />
@@ -32,10 +32,10 @@
         <span class="buttons">
           <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Firomiru%2F&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 
-          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://higashi-dance-network.appspot.com/iromiru/" data-text="iromiru - 画像からカラーコード抽出便利サービス" data-lang="ja">ツイート</a>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://higashi-dance-network.appspot.com/iromiru/" data-text="iromiru (イロミル) - 画像からカラーコード抽出便利サービス" data-lang="ja">ツイート</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/iromiru/" class="hatena-bookmark-button" data-hatena-bookmark-title="iromiru - 画像からカラーコード抽出便利サービス" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/iromiru/" class="hatena-bookmark-button" data-hatena-bookmark-title="iromiru (イロミル) - 画像からカラーコード抽出便利サービス" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
         </span>
       </div>
     </div>
