--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>盆3</title>
+    <title>bon3 (盆のTシャツ販売サイト)</title>
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="/bon3/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" src="/bon3/timbre.js"></script>
@@ -24,16 +24,12 @@
     <canvas>
     </canvas>
     <div id="footer">
-      <h1>盆3</h1>
       <div id="tshirts">
         <a href="/" target="_blank">
           <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
-          <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
-          <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
-          <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
         </a>
       </div>
-      <div id="copy">&copy; 2012 <a href="/">東ダンスネットワーク</a></div>
+      <div id="copy">&copy; 2012 <a href="/">東ダンスネットワーク</a> </div>
     </div>
   </body>
 </html>
