--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -2,7 +2,13 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+
     <title>bon3 (盆のTシャツ販売サイト)</title>
+    <meta name="description" content="bon3は盆のTシャツ販売サイトです。">
+    <meta property="og:title" content="iromiru (イロミル)  - 画像からカラーコード抽出便利サービス"/>
+    <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/thumbnail.png"/>
+
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="/bon3/underscore-min.js"></script>
     <script language="javascript" type="text/javascript" src="/bon3/timbre.js"></script>
@@ -29,7 +35,7 @@
           <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
         </a>
       </div>
-      <div id="copy">&copy; 2012 <a href="/">東ダンスネットワーク</a> </div>
+      <div id="copy">&copy; 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
   </body>
 </html>
