--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -35,6 +35,14 @@
           <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
         </a>
       </div>
+      <div id="volume" class="on">
+        <div class="sound-off">
+          <a href="/">off</a>
+        </div>
+        <div class="sound-on">
+          <a href="/">on</a>
+        </div>
+      </div>
       <div id="copy">&copy; 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
   </body>
