--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -31,8 +31,14 @@
     </canvas>
     <div id="footer">
       <div id="tshirts">
-        <a href="/" target="_blank">
-          <img src="http://static.clubt.jp/image/product/S0000041078/11511412_s.jpg"/>
+        <a href="http://clubt.jp/product/220643.html" target="_blank" title="盆(踊り)イエロー Tシャツ">
+          <img src="/bon3/image/tshirts-yellow.png"/>
+        </a>
+        <a href="http://clubt.jp/product/220642.html" target="_blank" title="盆(踊り)ピンク Tシャツ">
+          <img src="/bon3/image/tshirts-pink.png"/>
+        </a>
+        <a href="http://clubt.jp/product/220641.html" target="_blank" title="盆(踊り)ブルー Tシャツ">
+          <img src="/bon3/image/tshirts-blue.png"/>
         </a>
       </div>
       <div id="volume" class="on">
