--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="bon3は盆のTシャツ販売サイトです。">
     <meta property="og:title" content="iromiru (イロミル)  - 画像からカラーコード抽出便利サービス"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
-    <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/thumbnail.png"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/ogp.png"/>
 
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="/bon3/underscore-min.js"></script>
@@ -43,10 +43,10 @@
       </div>
       <div id="volume" class="on">
         <div class="sound-off">
-          <a href="/">off</a>
+          <a href="/" title="SOUND OFF" ><img src="/bon3/image/sound-off.png"></a>
         </div>
         <div class="sound-on">
-          <a href="/">on</a>
+          <a href="/" title="SOUND ON" ><img src="/bon3/image/sound-on.png"></a>
         </div>
       </div>
       <div id="copy">&copy; 2012 <a href="/">東ダンスネットワーク</a></div>
