--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="iromiru (イロミル)  - 画像からカラーコード抽出便利サービス"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/ogp.png"/>
+    <link rel="shortcut icon" href="/bon3/image/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
     <script language="javascript" type="text/javascript" src="/bon3/underscore-min.js"></script>
