--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,15 @@
           </div>
         </div>
 
+        <div class="item" style="left: 900px; top: 500px;">
+          <div>
+            <a href="/bon3/"><img src="/bon3/image/ogp.png" title="bon3"/></a>
+          </div>
+          <div class="title">
+            bon3
+          </div>
+        </div>
+
       </div> <!-- items end -->
 
     </div> <!-- wrapper end -->
