--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -5,7 +5,7 @@
 
     <title>bon3 (盆のTシャツ販売サイト)</title>
     <meta name="description" content="bon3は盆のTシャツ販売サイトです。">
-    <meta property="og:title" content="iromiru (イロミル)  - 画像からカラーコード抽出便利サービス"/>
+    <meta property="og:title" content="bon3 (盆のTシャツ販売サイト)"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/ogp.png"/>
     <link rel="shortcut icon" href="/bon3/image/favicon.ico">
