--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="bon3は盆のTシャツ販売サイトです。">
     <meta property="og:title" content="bon3 (盆のTシャツ販売サイト)"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
-    <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/ogp.png"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/bon3/image/ogp.png"/>
     <link rel="shortcut icon" href="/bon3/image/favicon.ico">
 
     <script language="javascript" type="text/javascript" src="/bon3/jquery-1.7.2.min.js"></script>
