--- a/public/bon3/index.html
+++ b/public/bon3/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 
     <title>bon3 (盆のTシャツ販売サイト)</title>
+    <meta name="viewport" content="width=800px, user-scalable=no">
     <meta name="description" content="bon3は盆のTシャツ販売サイトです。">
     <meta property="og:title" content="bon3 (盆のTシャツ販売サイト)"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/bon3/"/>
@@ -30,6 +31,12 @@
   <body>
     <canvas>
     </canvas>
+    <div class="sorry-pc">
+      Google ChromeかFirefoxで見てください
+    </div>
+    <div class="sorry-touch">
+      <a href="/"><img src="http://dl.dropbox.com/u/8270034/g/00f0972c7e3263d7514fa85a0a270e5a.png"></a> <!-- リンク先と画像URL仮です -->
+    </div>
     <div id="footer">
       <div id="tshirts">
         <a href="http://clubt.jp/product/220643.html" target="_blank" title="盆(踊り)イエロー Tシャツ">
