--- a/public/sukimap/edit/index.html
+++ b/public/sukimap/edit/index.html
@@ -35,7 +35,7 @@
       <div id="title-container">
         <div id="title">
           <a href="/sukimap/">
-            <img src="images/title.png" title="おなかすきまっぷ">
+            <img src="/sukimap/image/logo.png" title="おなかすきまっぷ">
           </a>
         </div>
       </div>
@@ -51,19 +51,20 @@
           <div class="faces">
 
             <label>
-              <input type="radio" name="face" value="1"/>満腹
+              <input type="radio" name="face" value="1"/>
+              <img src="/sukimap/image/face1.png"/>
             </label>
             <label>
-              <input type="radio" name="face" value="2" checked />ちょっとへってる
+              <input type="radio" name="face" value="2" />
+              <img src="/sukimap/image/face2.png"/>
             </label>
             <label>
-              <input type="radio" name="face" value="3"/>ふつうにへってる
+              <input type="radio" name="face" value="3" checked />
+              <img src="/sukimap/image/face2.png"/>
             </label>
             <label>
-              <input type="radio" name="face" value="4"/>だいぶへってる
-            </label>
-            <label>
-              <input type="radio" name="face" value="5"/>やばい
+              <input type="radio" name="face" value="4"/>
+              <img src="/sukimap/image/face4.png"/>
             </label>
           </div>
 
