--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -29,7 +29,7 @@
       <div id="title-container">
         <div id="title">
           <a href="/sukimap/">
-            <img src="images/title.png" title="おなかすきまっぷ">
+            <img src="/sukimap/image/logo.png" title="おなかすきまっぷ">
           </a>
         </div>
       </div>
