--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -34,7 +34,7 @@
       <div id="title-container">
         <div id="title">
           <a href="/sukimap/">
-            <img src="images/title.png" title="おなかすきまっぷ">
+            <img src="/sukimap/image/logo.png" title="おなかすきまっぷ">
           </a>
         </div>
       </div>
@@ -49,7 +49,7 @@
 
         <div class="share">
           <div class="twitter-container">
-            <a href=".">twitter</a>
+            <a class="twitter-share" href="." target="_blank">twitter</a>
           </div>
           <div class="facebook-container">
             <a href=".">facebook</a>
