--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -52,7 +52,7 @@
             <a class="twitter-share" href="." target="_blank">twitter</a>
           </div>
           <div class="facebook-container">
-            <a href=".">facebook</a>
+            <a class="facebook-share" href=".">facebook</a>
           </div>
         </div>
 
