--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -18,11 +18,29 @@
     <link rel="stylesheet" type="text/css" href="/sukimap/css/mobile.css" media="only screen and (max-device-width: 480px)" >
     <link rel="stylesheet" type="text/css" href="/sukimap/css/pc.css" media="only screen and (min-device-width: 481px)" >
 
-    <!-- favicon, og, facebook -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30891681-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+
   </head>
   <body data-page-id="main">
 
-    <!-- fb-root -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
     <div id="wrapper">
 
@@ -50,8 +68,14 @@
 
       </div>
 
-      <div id="copyright">
-        (C) 2012 東ダンスネットワーク
+      <div class="footer">
+        <div class="fb-container">
+          <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/sukimap/" data-send="false" data-width="310" data-show-faces="true"></div>
+        </div>
+
+        <div id="copyright">
+          <a href="/">(C) 2012 東ダンスネットワーク</a>
+        </div>
       </div>
 
     </div>
