--- a/public/sukimap/edit/index.html
+++ b/public/sukimap/edit/index.html
@@ -10,9 +10,7 @@
 
     <link rel="apple-touch-icon-precomposed" href="/sukimap/images/home-icon.png"/>
 
-    <!-- 追加 -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true&language=ja&region=JP"></script>
-    <!-- ここまで -->
 
 
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/jquery-1.8.1.min.js"></script>
@@ -23,8 +21,17 @@
     <link rel="stylesheet" type="text/css" href="/sukimap/css/mobile.css" media="only screen and (max-device-width: 480px)" >
     <link rel="stylesheet" type="text/css" href="/sukimap/css/pc.css" media="only screen and (min-device-width: 481px)" >
 
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30891681-1']);
+      _gaq.push(['_trackPageview']);
 
-    <!-- favicon, og, facebook -->
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body id="edit-page" data-page-id="edit">
 
@@ -85,8 +92,8 @@
 
       </div>
 
-      <div id="copyright">
-        (C) 2012 東ダンスネットワーク
+      <div class="footer">
+        <a href="/">(C) 2012 東ダンスネットワーク</a>
       </div>
 
     </div>
