--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -10,9 +10,7 @@
 
     <link rel="apple-touch-icon-precomposed" href="/sukimap/images/home-icon.png"/>
 
-    <!-- 追加 -->
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true&language=ja&region=JP"></script>
-    <!-- ここまで -->
 
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/jquery-1.8.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/underscore-min.js"></script>
@@ -24,10 +22,29 @@
 
 
     <!-- favicon, og, facebook -->
+
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30891681-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body id="suita-page" data-page-id="suita">
 
-    <!-- fb-root -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
     <div id="wrapper">
 
@@ -58,8 +75,14 @@
 
       </div>
 
-      <div id="copyright">
-        (C) 2012 東ダンスネットワーク
+      <div class="footer">
+        <div class="fb-container">
+          <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/sukimap/" data-send="false" data-width="310" data-show-faces="true"></div>
+        </div>
+
+        <div id="copyright">
+          <a href="/">(C) 2012 東ダンスネットワーク</a>
+        </div>
       </div>
 
     </div>
