--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -58,9 +58,9 @@
 
       <div id="main-content">
 
-        <p>
-          すきまっぷシマシタ!!!!
-        </p>
+        <div>
+          <span id="ago"></span>
+        </div>
 
         <div id="map-preview"></div>
 
