--- a/public/sukimap/edit/index.html
+++ b/public/sukimap/edit/index.html
@@ -51,8 +51,9 @@
 
 
         <form id="edit-form">
-          <div>
-            いまのおなかへり度に近い表情を教えてください
+          <div class="message">
+            <img class="flag" src="/sukimap/image/icon.png"/>
+            今の気持ちを選ぶ
           </div>
 
           <div class="faces">
@@ -75,25 +76,38 @@
             </label>
           </div>
 
-          <div>
-            おなかへりメッセージを入力してください
+          <div class="message">
+            <img class="flag" src="/sukimap/image/icon.png"/>
+            メッセージを入力する
           </div>
 
           <div class="message-container">
-            <textarea name="comment" placeholder="例：おなかすいた"></textarea>
+            <textarea name="comment" placeholder="例：寿司食べたい"></textarea>
+          </div>
+
+          <div class="message">
+            <img class="flag" src="/sukimap/image/icon.png"/>
+            プレビュー
           </div>
 
           <div id="map-preview"></div>
 
+          <div class="message">
+            <img class="flag" src="/sukimap/image/icon.png"/>
+            すきまっぷを保存します
+          </div>
+
           <div class="submit-container">
-            <input type="submit" value="決定"/>
+            <button class="image-button" type="submit"><img class="ok-button" src="/sukimap/image/button_ok.png"/></button>
           </div>
         </form>
 
       </div>
 
       <div class="footer">
-        <a href="/">(C) 2012 東ダンスネットワーク</a>
+        <div id="copyright">
+          <a href="/">(C) 2012 東ダンスネットワーク</a>
+        </div>
       </div>
 
     </div>
