--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -31,7 +31,7 @@
     </script>
 
   </head>
-  <body data-page-id="main">
+  <body id="main" data-page-id="main">
 
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
@@ -61,9 +61,7 @@
         </div>
 
         <div class="start">
-          <button class="start-button">
-            おなかすいた
-          </button>
+          <button class="image-button start-button"><img class="start-button" src="/sukimap/image/button_onaka.png"/></button>
         </div>
 
       </div>
