--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -71,6 +71,14 @@
           <div class="facebook-container">
             <a class="facebook-share" href=".">facebook</a>
           </div>
+
+          <div class="message">
+            共有しましょう
+          </div>
+        </div>
+
+        <div class="guest">
+          おなかすいているようです．
         </div>
 
       </div>
