--- a/public/sukimap/edit/index.html
+++ b/public/sukimap/edit/index.html
@@ -58,22 +58,34 @@
 
           <div class="faces">
 
-            <label>
-              <input type="radio" name="face" value="1"/>
-              <img src="/sukimap/image/face1.png"/>
-            </label>
-            <label>
-              <input type="radio" name="face" value="2" />
-              <img src="/sukimap/image/face2.png"/>
-            </label>
-            <label>
-              <input type="radio" name="face" value="3" checked />
-              <img src="/sukimap/image/face3.png"/>
-            </label>
-            <label>
-              <input type="radio" name="face" value="4"/>
-              <img src="/sukimap/image/face4.png"/>
-            </label>
+            <div class="face-wrapper">
+              <label>
+                <input type="radio" name="face" value="1"/>
+                <img src="/sukimap/image/face1.png"/>
+              </label>
+            </div>
+            <div class="face-wrapper">
+              <label>
+                <input type="radio" name="face" value="2" />
+                <img src="/sukimap/image/face2.png"/>
+              </label>
+            </div>
+            <div class="face-wrapper">
+              <label>
+                <input type="radio" name="face" value="3" checked />
+                <img src="/sukimap/image/face3.png"/>
+              </label>
+            </div>
+            <div class="face-wrapper">
+              <label>
+                <input type="radio" name="face" value="4"/>
+                <img src="/sukimap/image/face4.png"/>
+              </label>
+            </div>
+            <div class="clear">
+            </div>
+          </div>
+          <div class="clear">
           </div>
 
           <div class="message">
