--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -54,14 +54,22 @@
 
       <div id="main-content">
 
-        <div class="guide">
-          ひとりでおなかすいたことはありませんか？？？？
+        <div class="message">
+          おなかすきまっぷとは…
           <br/>
-          そんなときにはおなかすきまっぷ！！！
+          おなかすいていることを友達に伝えるサービスです
+        </div>
+
+        <div class="line">
+          <img class="line-image" src="/sukimap/image/line.png"/>
         </div>
 
         <div class="start">
           <button class="image-button start-button"><img class="start-button" src="/sukimap/image/button_onaka.png"/></button>
+        </div>
+
+        <div class="guide">
+          <img class="guide-image" src="/sukimap/image/guide.png"/>
         </div>
 
       </div>
