--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -58,27 +58,38 @@
 
       <div id="main-content">
 
-        <div>
-          <span id="ago"></span>
+        <div class="created-message">
+          おなかすきまっぷをつくりました
+        </div>
+
+        <div class="time-back">
+          <div id="ago"></div>
         </div>
 
         <div id="map-preview"></div>
 
         <div class="share">
           <div class="twitter-container">
-            <a class="twitter-share" href="." target="_blank">twitter</a>
+            <a class="twitter-share" href="." target="_blank"><img class="social-button" src="/sukimap/image/button_twitter.png"/></a>
           </div>
           <div class="facebook-container">
-            <a class="facebook-share" href=".">facebook</a>
+            <a class="facebook-share" href="."><img class="social-button" src="/sukimap/image/button_facebook.png"/></a>
           </div>
 
           <div class="message">
-            共有しましょう
+            このおなかすきまっぷを、TwitterやFacebookで共有して、近くのおなかすき友達を探しましょう
           </div>
         </div>
 
-        <div class="guest">
-          おなかすいているようです．
+        <div class="guest message">
+          おなかすきまっぷは、おなかすいたことを友達に伝えるサービスです。近くにいる人はTwitterやFacebookなどでご飯に誘ってあげましょう。
+          <br/>
+          <br/>
+          <a href="/">おなかすきまっぷとは</a>
+        </div>
+
+        <div class="line">
+          <img class="line-image" src="/sukimap/image/line.png"/>
         </div>
 
       </div>
