--- a/public/sukimap/edit/index.html
+++ b/public/sukimap/edit/index.html
@@ -53,7 +53,7 @@
         <form id="edit-form">
           <div class="message">
             <img class="flag" src="/sukimap/image/icon.png"/>
-            今の気持ちを選ぶ
+            今のおなかすき具合を選びましょう
           </div>
 
           <div class="faces">
@@ -90,7 +90,7 @@
 
           <div class="message">
             <img class="flag" src="/sukimap/image/icon.png"/>
-            メッセージを入力する
+            おなかすきメッセージを入力しましょう
           </div>
 
           <div class="message-container">
@@ -106,7 +106,7 @@
 
           <div class="message">
             <img class="flag" src="/sukimap/image/icon.png"/>
-            すきまっぷを保存します
+            おなかすきまっぷを保存します
           </div>
 
           <div class="submit-container">
