--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -8,7 +8,15 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no" />
 
-    <link rel="apple-touch-icon-precomposed" href="images/home-icon.png"/>
+    <link rel="shortcut icon" href="/sukimap/image/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="/sukimap/image/appicon.png"/>
+    <meta property="og:title" content="おなかすきまっぷ"/>
+    <meta property="og:url" content="http://higashi-dance-network.appspot.com/sukimap/"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/sukimap/image/og.png"/>
+
+    <meta name="description" content="おなかすきまっぷは、おなかのすき具合と今いる場所をTwitterやFacebookで共有できるサービスです。近くにいる友達にご飯にさそってもらいましょう。">
+
+    <link rel="canonical" href="http://higashi-dance-network.appspot.com/sukimap/" />
 
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/jquery-1.8.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/underscore-min.js"></script>
@@ -57,7 +65,9 @@
         <div class="message">
           おなかすきまっぷとは…
           <br/>
-          おなかすいていることを友達に伝えるサービスです
+          おなかすいていることを友達に伝えるサービスです。
+          <br/>
+          おなかすき具合と場所を友達に共有しましょう。
         </div>
 
         <div class="line">
