--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -69,6 +69,9 @@
         <div id="map-preview"></div>
 
         <div class="share">
+          <div class="message">
+            おなかすきまっぷを、TwitterやFacebookで共有して、近くのおなかすき友達を探しましょう。
+          </div>
           <div class="twitter-container">
             <a class="twitter-share" href="." target="_blank"><img class="social-button" src="/sukimap/image/button_twitter.png"/></a>
           </div>
@@ -77,12 +80,16 @@
           </div>
 
           <div class="message">
-            このおなかすきまっぷを、TwitterやFacebookで共有して、近くのおなかすき友達を探しましょう
+            <div class="attension">
+              ※おなかすきまっぷをTwitterに投稿すると、あなたの位置情報がフォロワーに公開されます。
+              <br/>
+              Facebookに投稿すると、ウォールに公開されます。
+            </div>
           </div>
         </div>
 
         <div class="guest message">
-          おなかすきまっぷは、おなかすいたことを友達に伝えるサービスです。近くにいる人はTwitterやFacebookなどでご飯に誘ってあげましょう。
+          おなかすきまっぷは、おなかすいたことを近くの友達に伝えるサービスです。近くにいる人はTwitterやFacebookなどでご飯に誘ってあげましょう。
           <br/>
           <br/>
           <a href="/">おなかすきまっぷとは</a>
