--- a/public/sukimap/edit/index.html
+++ b/public/sukimap/edit/index.html
@@ -12,6 +12,13 @@
 
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true&language=ja&region=JP"></script>
 
+    <link rel="shortcut icon" href="/sukimap/image/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="/sukimap/image/appicon.png"/>
+    <meta property="og:title" content="おなかすきまっぷ"/>
+    <meta property="og:url" content="http://higashi-dance-network.appspot.com/sukimap/"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/sukimap/image/og.png"/>
+
+    <meta name="description" content="おなかすきまっぷは、おなかのすき具合と今いる場所をTwitterやFacebookで共有できるサービスです。近くにいる友達にご飯にさそってもらいましょう。">
 
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/jquery-1.8.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="/sukimap/js/underscore-min.js"></script>
@@ -34,8 +41,6 @@
     </script>
   </head>
   <body id="edit-page" data-page-id="edit">
-
-    <!-- fb-root -->
 
     <div id="wrapper">
 
