--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -20,8 +20,13 @@
     <link rel="stylesheet" type="text/css" href="/sukimap/css/mobile.css" media="only screen and (max-device-width: 480px)" >
     <link rel="stylesheet" type="text/css" href="/sukimap/css/pc.css" media="only screen and (min-device-width: 481px)" >
 
+    <link rel="shortcut icon" href="/sukimap/image/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="/sukimap/image/appicon.png"/>
+    <meta property="og:title" content="おなかすきまっぷ"/>
+    <meta property="og:url" content="http://higashi-dance-network.appspot.com/sukimap/"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/sukimap/image/og.png"/>
 
-    <!-- favicon, og, facebook -->
+    <meta name="description" content="おなかすきまっぷは、おなかのすき具合と今いる場所をTwitterやFacebookで共有できるサービスです。近くにいる友達にご飯にさそってもらいましょう。">
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
