--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,15 @@
           </div>
         </div>
 
+        <div class="item" style="left: 100px; top: 700px;">
+          <div>
+            <a href="/sukimap/"><img src="/sukimap/image/og.png" title="おなかすきまっぷ"/></a>
+          </div>
+          <div class="title">
+            おなかすきまっぷ
+          </div>
+        </div>
+
       </div> <!-- items end -->
 
     </div> <!-- wrapper end -->
