リンク先修正

--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -97,7 +97,7 @@
           おなかすきまっぷは、おなかすいたことを近くの友達に伝えるサービスです。近くにいる人はTwitterやFacebookなどでご飯に誘ってあげましょう。
           <br/>
           <br/>
-          <a href="/">おなかすきまっぷとは</a>
+          <a href="/sukimap/">おなかすきまっぷとは</a>
         </div>
 
       </div>
