地図プロット

--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -73,6 +73,9 @@
 
         <div id="map-preview"></div>
 
+        <div id="shop-preview">
+        </div>
+
         <div class="share">
           <div class="message">
             おなかすきまっぷを、TwitterやFacebookで共有して、近くのおなかすき友達を探しましょう。
