--- a/public/sukimap/index.html
+++ b/public/sukimap/index.html
@@ -84,6 +84,25 @@
 
       </div>
 
+      <p class="api-message">
+        すきまっぷでは、以下のAPIを利用しています。
+      </p>
+
+      <div class="apis">
+        <div class="api">
+          <!-- Begin Yahoo! JAPAN Web Services Attribution Snippet -->
+          <a href="http://developer.yahoo.co.jp/about">
+            <img src="http://i.yimg.jp/images/yjdn/yjdn_attbtn1_88_35.gif" width="88" height="35" title="Webサービス by Yahoo! JAPAN" alt="Web Services by Yahoo! JAPAN" border="0" style="margin:15px 15px 15px 15px"></a>
+          <!-- End Yahoo! JAPAN Web Services Attribution Snippet -->
+        </div>
+
+        <div class="api hotpepper-bana">
+          <a href="http://webservice.recruit.co.jp/"><img src="http://webservice.recruit.co.jp/banner/hotpepper-m.gif" alt="ホットペッパー Webサービス" width="88" height="35" border="0" title="ホットペッパー Webサービス"></a>
+        </div>
+      </div>
+
+
+
       <div class="footer">
         <div class="fb-container">
           <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/sukimap/" data-send="false" data-width="310" data-show-faces="true"></div>
