最初隠しておくとか

--- a/public/sukimap/suita/index.html
+++ b/public/sukimap/suita/index.html
@@ -103,7 +103,7 @@
           <a href="/sukimap/">おなかすきまっぷとは</a>
         </div>
 
-        <div class="shoptitle-back">
+        <div class="shoptitle-back" style="display: none">
           <div class="shoptitle">
             今あいている近くのお店
           </div>
